<resources>
    <string name="app_name">Learning Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_activity_1_for_understanding_activity_life_cycle">This is Activity 1 for understanding activity life cycle</string>
    <string name="this_is_activity_1_for_understanding_activity_lifecycle">this is activity 1 for understanding activity lifecycle</string>
    <string name="this_is_the_activity_2_for_understanding_activity_lifecycle">this is the activity_2 for understanding activity lifecycle</string>
    <string name="activity_explaining_standard_task">Activity explaining Standard Task</string>
    <string name="standard_task">Standard task</string>
    <string name="single_top">Single Top</string>
    <string name="single_task">Single Task</string>
    <string name="single_instance">single instance</string>
    <string name="activity">Activity</string>
    <string name="layouts">Layouts</string>
    <string name="fragment">Fragment</string>
    <string name="passing_object_during_navigation">passing object during navigation</string>
    <string name="tasks">tasks</string>
    <string name="activity_lifecycle">Activity Lifecycle</string>
    <string name="activity_of_single_instance">activity of single instance</string>
    <string name="next_activity">next activity</string>

    <string name="go_to_standard_task">go to standard task</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="clear_text">clear text</string>
    <string name="example_of_constraint_layout">Example of Constraint layout</string>
    <string name="button">button</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="recycler_view">Recycler View</string>
    <string name="model_login_page">Model Login Page</string>
    <string name="this_is_an_example_of_linear_layout">this is an example of linear layout</string>
    <string name="button_linear_layout">Button</string>
    <string name="name">Name</string>
    <string name="registration_number">Registration number</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="get_first_name">first_name</string>
    <string name="get_last_name">last_name</string>
    <string name="click_to_display_name">click to display name</string>

    <string name="start_thread">start thread</string>
    <string name="thread">thread</string>
    <string name="thread_using_runnable">thread using runnable</string>
    <string name="start_thread_runnable">start thread</string>
    <string name="thread_extending_thread">thread extending thread</string>
    <string name="thread_using_runnable_interface">thread using runnable interface</string>
    <string name="network_call_to_an_api_without_using_library">network call to an api without using library</string>
    <string name="network_call_using_retrofit_library">network call using retrofit library</string>
    <string name="pressure">Pressure</string>
    <string name="this_is_a_relative_layout">This is a Relative Layout</string>
    <string name="demo_button">Demo button</string>
    <string name="this_activity_is_declared_as_single_top">this activity is declared as single top</string>
    <string name="activity_of_single_task">activity of single task</string>
    <string name="activity_explaining_standardtask">activity explaining standardTask</string>
    <string name="click_to_send_data">click to send data</string>
    <string name="service">Service</string>
    <string name="start_intent_service">start intent service</string>
    <string name="thread_message">thread completed</string>
    <string name="string_pressure">pressure:</string>
    <string name="start_service">start service</string>
    <string name="bind_service">bind service</string>
</resources>
