<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_registration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/registration_number"
        android:inputType="number"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:text="@string/login">
    </Button>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up">

    </Button>


</LinearLayout>
