<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/activity_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity"
        android:textSize="15sp" />

    <Button
        android:id="@+id/layout_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/layouts"
        android:textSize="15sp" />

    <Button
        android:id="@+id/fragment_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/fragment"
        android:textSize="15sp" />

    <Button
        android:id="@+id/thread_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/thread"
        android:textSize="15sp" />
</LinearLayout>
